--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -18,9 +18,9 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(-45deg,  #008080, #C1F6B6, #8E61D1, #70D2FF);
+    background: linear-gradient(-45deg, #FEFFEA, #C9C9C9, #A3A3A3, #404e5c);
     background-size: 300% 300%;
-    animation: gradient 15s ease infinite;
+    animation: gradient 10s ease infinite;
 }
 
 header {
@@ -29,9 +29,6 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background: linear-gradient(45deg,  #008080, #C1F6B6, #8E61D1, #70D2FF);
-    background-size: 300% 300%;
-    animation: gradient 15s ease infinite;
 }
 
 footer {
@@ -40,21 +37,13 @@ footer {
     justify-content: space-between;
     align-items: center;
     padding: 10px;
-    background: linear-gradient(45deg,  #008080, #C1F6B6, #8E61D1, #70D2FF);
-    background-size: 300% 300%;
-    animation: gradient 15s ease infinite;
 }
 
 @keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 50% 100%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+    0% {background-position: 0% 0%;}
+    50% {background-position: 100% 100%;}
+    100% {background-position: 0% 0%;}
+
 }
 .nav-logo {
     display: flex;
