--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -20,7 +20,7 @@ body {
     justify-content: space-between;
     background: linear-gradient(-45deg, #C9C9C9, #A3A3A3, #404e5c, #e3e3d7);
     background-size: 300% 300%;
-    animation: gradient 10s ease infinite;
+    animation: gradient 30s linear infinite;
 }
 
 header {
@@ -41,9 +41,10 @@ footer {
 
 @keyframes gradient {
     0% {background-position: 0% 0%;}
+    25% {background-position: 0% 100%;}
     50% {background-position: 100% 100%;}
+    75% {background-position: 100% 0%;}
     100% {background-position: 0% 0%;}
-
 }
 .nav-logo {
     display: flex;
