wip: routing and views for login, home, 2fa..

--- a/main_app/templates/two_factor/_base.html
+++ b/main_app/templates/two_factor/_base.html
@@ -12,7 +12,7 @@
     <header>
         <div class='nav-logo'>
             <img class='nav-logo-img' src="{% static 'images/logo.png' %}"></img>
-            <div class='nav-logo-txt'>Pero Password Protector</div>
+            <div class='nav-logo-txt'>P3R0 Protector</div>
         </div>
         <nav>
             <a href='/'>Home</a>
