--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -12,12 +12,14 @@
     <header>
         <div class='nav-logo'>
             <img class='nav-logo-img' src="{% static 'images/logo.png' %}"></img>
-            <div class='nav-logo-txt'>Pero Password Protector</div>
+            <div class='nav-logo-txt'>P3R0 Protector</div>
         </div>
+        {% if user.is_authenticated %}
         <nav>
             <a href='/'>Home</a>
             <a href='/about'>About</a>
         </nav>
+        {% endif %}
     </header>
     <main>{% block content %} {% endblock %}</main>
 </body>
