--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
-    background: linear-gradient(-45deg, #C9C9C9, #A3A3A3, #404e5c, #e3e3d7);
+    background: linear-gradient(-45deg, #C9C9C9, #A3A3A3, #e3e3d7, #404e5c);
     background-size: 300% 300%;
     animation: gradient 30s linear infinite;
 }
