--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -1,25 +1,29 @@
 {% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
+    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" /> {% endcomment %}
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
     <title>P3 Protector</title>
 </head>
 <body>
     <header>
         <div class='nav-logo'>
             <img class='nav-logo-img' src="{% static 'images/logo.png' %}"></img>
-            <div class='nav-logo-txt'>P3R0 Protector</div>
+            <div class='nav-logo-txt'>P3 Protector</div>
         </div>
-        {% if user.is_authenticated %}
-        <nav>
-            <a href='/'>Home</a>
-            <a href='/about'>About</a>
-        </nav>
-        {% endif %}
+            <nav>
+                {% if user.is_authenticated %}
+                <a href='/'>Home</a>
+                <a href='/account/two_factor/'>Account Security</a>
+                <a href='/account/logout/'>Logout</a>
+                {% endif %}
+            </nav>
+
     </header>
     <main>{% block content %} {% endblock %}</main>
 </body>
