--- a/main_app/templates/two_factor/_base.html
+++ b/main_app/templates/two_factor/_base.html
@@ -1,26 +1,8 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
-    <title>P3 Protector</title>
-</head>
-<body>
-    <header>
-        <div class='nav-logo'>
-            <img class='nav-logo-img' src="{% static 'images/logo.png' %}"></img>
-            <div class='nav-logo-txt'>P3R0 Protector</div>
-        </div>
-        <nav>
-            <a href='/'>Home</a>
-            <a href='/about'>About</a>
-        </nav>
-    </header>
-    <main>{% block content %} {% endblock %}</main>
-</body>
-<footer>
-</footer>
-</html>
+{% extends 'base.html' %}
+
+<div>
+    {% block content %}
+
+    {% endblock %}
+</div>
+
