--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" /> {% endcomment %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/css/bootstrap.min.css">
     <title>P3 Protector</title>
 </head>
@@ -19,6 +19,7 @@
             <nav>
                 {% if user.is_authenticated %}
                 <a href='/'>Home</a>
+                <a href='/vault'>Your Vault</a>
                 <a href='/account/two_factor/'>Account Security</a>
                 <a href='/account/logout/'>Logout</a>
                 {% endif %}
