--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -26,7 +26,9 @@
             </nav>
 
     </header>
-    <main>{% block content %} {% endblock %}</main>
+    <main>
+        {% block content %} {% endblock %}
+    </main>
 </body>
 <footer>
 </footer>
