--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -11,7 +11,7 @@
 <form action="{% url 'signup' %}" method="POST">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Sign Up" class="btn blue" />
+    <input type="submit" value="Sign Up"/>
 </form>
 
 {% endblock %}
