--- a/main_app/templates/vault/index.html
+++ b/main_app/templates/vault/index.html
@@ -6,12 +6,17 @@
 
 {% for account in accounts %}
 <div class="card">
-  <a href="{% url 'detail' cat.id %}">
+  <a href="{% url 'detail' account.id %}">
     <div class="card-content">
       <span class="card-title">{{ account.service }}</span>
     </div>
   </a>
 </div>
 {% endfor %}
+
+<form action="{% url 'create' %}" method="post">
+  {% csrf_token %} {{ account_form.as_p }}
+  <input type="submit" class="btn" value="Add Account" />
+</form>
 
 {% endblock %}
