--- a/main_app/templates/vault/detail.html
+++ b/main_app/templates/vault/detail.html
@@ -1,5 +1,13 @@
 {% extends 'base.html' %} 
 
 {% block content %}
-
+<div class="card">
+    <a href="{% url 'detail' account.id %}">
+      <div class="card-content">
+        <span class="card-title">{{ account.service }}</span>
+        <span class="card-title">{{ login }}</span>
+        <span class="card-title">{{ password }}</span>
+      </div>
+    </a>
+  </div>
 {% endblock %}
