delete and update working better

--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -14,7 +14,7 @@
     <header>
         <div class='nav-logo'>
             <img class='nav-logo-img' src="{% static 'images/logo.png' %}"></img>
-            <div class='nav-logo-txt'>P3 Protector</div>
+            <div class='nav-logo-txt'>P3 Password Manager</div>
         </div>
             <nav>
                 {% if user.is_authenticated %}
