--- a/main_app/templates/main_app/storedaccount_confirm_delete.html
+++ b/main_app/templates/main_app/storedaccount_confirm_delete.html
@@ -11,7 +11,7 @@
 
 <form action="" method="POST">
   {% csrf_token %}
-  <input type="submit" value="Yes - Delete!" class="btn" />
+  <input type="submit" value="Yes - Delete!"" />
   <a href="/vault/">Cancel</a>
 </form>
 
