update button in place

--- a/main_app/templates/vault/detail.html
+++ b/main_app/templates/vault/detail.html
@@ -8,5 +8,6 @@
         <span class="card-title">{{ password }}</span>
       </div>
     <a href="/vault/{{account.id}}/delete">DELETE</a>
+    <a href="/vault/{{account.id}}/update">UPDATE</a>
   </div>
 {% endblock %}
